[Roles] Cosmetic fix for persisted notice - fix the alignment of "never show this again" button to always display in the top right-hand corner.

--- a/app/assets/stylesheets/sass/main.sass
+++ b/app/assets/stylesheets/sass/main.sass
@@ -4105,7 +4105,7 @@ input#upload_files, input#start_over, input#validate_domains
   .close_flash_message
     color: #5a79a5
     cursor: pointer
-    margin-right: -1.5rem
+    margin-right: -0.5rem
     span
       font-weight: normal
     span:nth-child(1)
